product schedule mid autocomplete fixes

--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
@@ -65,7 +65,7 @@
                   <div class="details__container">
                     <div class="details_container__item">
                       <div>Cycles</div>
-                      <div>{{productScheduleCycles ? productScheduleCycles.cycles.length : 1}}</div>
+                      <div>{{productSchedule ? productSchedule.cycles.length : 1}}</div>
                     </div>
 
                     <div class="details_container__item">
