Update edit behavior on product schedule editor view

--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
@@ -87,10 +87,10 @@
       <mat-tab>
         <cycles-editor
           [productSchedule]="productScheduleCycles"
-          [statePersisted]="productScheduleCyclesStatePersisted()"
           (saveChanges)="saveProductScheduleCycles($event)"
           (undoChanges)="undoProductScheduleCycles()"
           (redoChanges)="redoProductScheduleCycles()"
+          (cancelChanges)="cancelProductScheduleCyclesChanges()"
         ></cycles-editor>
       </mat-tab>
 
