Hide delete button when not in edit mode

--- a/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.html
+++ b/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.html
@@ -71,4 +71,4 @@
 
 </div>
 
-<button *ngIf="cycleOptions.length > 2" mat-button class="delete-button" (click)="deleteCycle($event)">DELETE CYCLE</button>
+<button *ngIf="editMode && cycleOptions.length > 2" mat-button class="delete-button" (click)="deleteCycle($event)">DELETE CYCLE</button>
