--- a/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.scss
+++ b/src/app/shared/components/cycles-editor/cycle-info/cycle-info.component.scss
@@ -1,8 +1,9 @@
 .details-wrapper {
-  padding: 25px;
+  padding: 25px 15px;
 
   .title {
     margin-bottom: 16px;
+    padding: 0 10px;
 
     div {
       font-size: 16px;
@@ -29,32 +30,23 @@
     mat-form-field {
       width: 75px;
     }
-
-    .quantity {
-      width: 35px;
-      margin-left: auto;
-      margin-right: 20px;
-    }
-
-    mat-checkbox {
-      margin-right: 5px;
-    }
   }
 
   .heading {
     display: flex;
+    padding: 0 10px;
     font-size: 13px;
     color: #5F6368;
     font-weight: 500;
 
     div:nth-of-type(2) {
       margin-left: auto;
-      margin-right: 30px;
+      margin-right: 36px;
     }
   }
 
   .products-title {
-    margin: 12px 0 16px;
+    margin: 12px 10px 16px;
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
@@ -64,11 +56,29 @@
   .days-dropdown {
     margin-top: 14px;
   }
+}
 
-  .cycle-dropdown {
-    margin-left: auto;
-    margin-right: 10px;
+.product-details-container {
+  width: 100%;
+  align-items: center;
+
+  .product-name {
+    margin-top: 4px;
   }
+
+  .quantity {
+    width: 35px !important;
+    margin-left: auto;
+  }
+}
+
+mat-checkbox {
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.container--right {
+  margin-left: auto;
 }
 
 .delete-button {
