--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -811,3 +811,27 @@ $info-width: 290px;
     display: none;
   }
 }
+
+.underline-container {
+  display: flex;
+  padding: 0 8px 5px;
+  border-bottom: 2px solid rgba(0,0,0,0);
+  transition: border-color 250ms;
+
+  .mat-form-field-wrapper {
+    padding-bottom: 0 !important;
+  }
+
+  .mat-form-field-underline {
+    display: none;
+  }
+
+  .dropdown-container {
+    margin-bottom: 4px !important;
+  }
+
+  &--editable {
+    border-color: $main-color-400;
+    transition: border-color 250ms;
+  }
+}
