--- a/src/app/pages/products-page/product-view/product-view.component.html
+++ b/src/app/pages/products-page/product-view/product-view.component.html
@@ -62,15 +62,15 @@
         <div class="section__content">
           <ng-container *ngIf="entity">
             <div class="details-box details-box--blue" [class.details-box--disabled]="!editMain">
-              <div class="edit-row edit-row--first">
+              <div class="edit-row edit-row--first underline-container" [class.underline-container--editable]="editMain" style="margin-top: 0;">
                 <mat-form-field>
                   <input auto-focus [delay]="500" type="text" matInput [(ngModel)]="entity.name" [readonly]="!editMain" maxlength="55">
                 </mat-form-field>
 
-                <mat-icon *ngIf="!editMain" (click)="setEditMain()">edit</mat-icon>
+                <div class="edit-button" *ngIf="!editMain" (click)="setEditMain()">EDIT</div>
               </div>
 
-              <div class="flex-custom flex-custom--center">
+              <div class="flex-custom flex-custom--center underline-container" [class.underline-container--editable]="editMain" style="margin-top: 10px;">
                 <div class="dropdown-container dropdown-container--first" (click)="openMerchantAssociationModal()">
                   <div class="floating-placeholder" [class.floating-placeholder--invisible]="!merchantAssociation.merchantProviderGroup.name">
                     Merchant Processing
@@ -83,7 +83,7 @@
                   </div>
                 </div>
 
-                <mat-icon *ngIf="editMain && merchantAssociationBackup.id" class="dropdown-icon" (click)="removeMerchantAssociation()">close</mat-icon>
+                <mat-icon *ngIf="editMain && merchantAssociationBackup.id" class="dropdown-icon close-icon" (click)="removeMerchantAssociation()">close</mat-icon>
               </div>
 
               <div class="edit-buttons" *ngIf="editMain">
@@ -93,53 +93,54 @@
             </div>
             <div class="details-box" [class.details-box--disabled]="!editSecondary">
               <div class="edit-row edit-row--second">
-                <div class="box-title">General</div>
-                <mat-icon *ngIf="!editSecondary" (click)="setEditSecondary()">edit</mat-icon>
+                <div class="box-title">General Information</div>
+                <div class="edit-button" *ngIf="!editSecondary" (click)="setEditSecondary()">EDIT</div>
               </div>
-              <mat-form-field>
-                <input type="text" matInput placeholder="SKU" [(ngModel)]="entity.sku" [readonly]="!editSecondary">
-              </mat-form-field>
+
+              <div class="underline-container" [class.underline-container--editable]="editSecondary">
+                <mat-form-field class="container-editable">
+                  <input type="text" matInput placeholder="SKU" [(ngModel)]="entity.sku" [readonly]="!editSecondary">
+                </mat-form-field>
+              </div>
 
               <div class="row">
-                <mat-form-field>
-                  <input matInput currencyInput [initPrice]="entity.defaultPrice" (priceChanged)="priceUpdated($event)" placeholder="Default Price" type="text" [readonly]="!editSecondary">
-                </mat-form-field>
+                <div class="underline-container" [class.underline-container--editable]="editSecondary">
+                  <mat-form-field>
+                    <input matInput currencyInput [initPrice]="entity.defaultPrice" (priceChanged)="priceUpdated($event)" placeholder="Default Price" type="text" [readonly]="!editSecondary">
+                  </mat-form-field>
+                </div>
               </div>
 
               <mat-checkbox class="checkbox-blue" [(ngModel)]="entity.ship" [disabled]="!editSecondary">is Shippable</mat-checkbox>
 
               <ng-container *ngIf="entity.ship">
-                <div [matMenuTriggerFor]="fulfillmentProviderMenu" class="dropdown-container" [style.pointer-events]="editSecondary ? 'auto' : 'none'">
-                  <div class="floating-placeholder" [class.floating-placeholder--invisible]="!entity.fulfillmentProvider.name">Fulfillment Provider</div>
-                  <div class="content">
-                    <div [class.placeholder]="!entity.fulfillmentProvider.name"
-                         [class.placeholder-error]="fulfillmentInvalid && !entity.fulfillmentProvider.name">
-                      {{entity.fulfillmentProvider.name || 'Fulfillment Provider'}}
-                    </div>
-                    <mat-icon class="dropdown-icon">arrow_drop_down</mat-icon>
-                  </div>
+
+                <div class="underline-container" [class.underline-container--editable]="editSecondary">
+                  <custom-mat-dropdown
+                          (selectItem)="selectProvider($event)"
+                          (addNewSelected)="navigateToAddNewFulfillmentProvider()"
+                          [mapper]="fulfillmentProviderMapper"
+                          [editable]="editSecondary"
+                          [items]="fulfillmentProviders"
+                          [selectedItem]="entity.fulfillmentProvider"
+                          [placeholder]="'Fulfillment Provider'">
+                  </custom-mat-dropdown>
                 </div>
 
-                <mat-menu #fulfillmentProviderMenu="matMenu" x-position="before">
-                  <button mat-menu-item
-                          *ngFor="let provider of fulfillmentProviders"
-                          (click)="selectProvider(provider)">
-                    {{provider.name}}
-                  </button>
-
-                  <button class="new-fulfillment" mat-menu-item [routerLink]="['/fulfillmentproviders']" [queryParams]="{action: 'new'}">
-                    Add New Fulfillment
-                  </button>
-                </mat-menu>
-
                 <div class="row">
-                  <mat-form-field>
-                    <input matInput [(ngModel)]="entity.shippingDelay" placeholder="Shipping Delay" [readonly]="!editSecondary">
-                  </mat-form-field>
 
-                  <mat-form-field>
-                    <input matInput currencyInput [initPrice]="entity.shippingPrice" (priceChanged)="shippingPriceUpdated($event)" placeholder="Shipping Price" type="text" [readonly]="!editSecondary">
-                  </mat-form-field>
+                  <div style="margin-right: auto" class="underline-container" [class.underline-container--editable]="editSecondary">
+                    <mat-form-field>
+                      <input matInput [(ngModel)]="entity.shippingDelay" placeholder="Shipping Delay" [readonly]="!editSecondary">
+                    </mat-form-field>
+                  </div>
+
+                  <div class="underline-container" [class.underline-container--editable]="editSecondary">
+                    <mat-form-field>
+                      <input matInput currencyInput [initPrice]="entity.shippingPrice" (priceChanged)="shippingPriceUpdated($event)" placeholder="Shipping Price" type="text" [readonly]="!editSecondary">
+                    </mat-form-field>
+                  </div>
+
                 </div>
 
               </ng-container>
