--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.scss
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.scss
@@ -32,9 +32,18 @@ custom-mat-dropdown {
   width: 165px;
 }
 
+.edit-row--first {
+  font-weight: 500;
+
+  .mat-form-field {
+    width: 100%;
+  }
+}
+
 .details__title {
   line-height: 14px;
-  font-size: 14px;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 .details__container {
@@ -60,7 +69,7 @@ custom-mat-dropdown {
 }
 
 .mid-group {
-  margin-top: 38px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
@@ -72,4 +81,9 @@ custom-mat-dropdown {
   width: 18px;
   height: 18px;
   cursor: pointer;
+}
+
+.underline-container {
+  margin-left: -10px;
+  margin-right: -10px;
 }
