--- a/src/app/pages/products-page/products-index/products.component.html
+++ b/src/app/pages/products-page/products-index/products.component.html
@@ -36,32 +36,25 @@
 
     <ng-container *ngFor="let entity of entities | filterStrings: filterString: filterFunction">
       <div class="entity-card" [class.entity-card--selected]="entity.bulkSelected" (click)="selectEntity(entity)" (dblclick)="goToEntity(entity)">
-        <div class="title">{{entity.name}}</div>
+
+        <div class="name heading">{{ entity.name }}</div>
+        <div class="sku heading">{{ getSku(entity) }}</div>
+
 
         <div class="image-wrapper" [class.image-wrapper--blue]="getDefaultImagePath(entity) === '/assets/images/product-default-image.svg'">
           <img src="{{getDefaultImagePath(entity)}}" alt="">
-          <div class="subscription-mark" *ngIf="isSubscription(entity)">Schedule</div>
+          <ng-container *ngIf="isSubscription(entity)">
+            <div class="subscription-mark">
+              Subscription
+              <div class="subscription-mark-addon"></div>
+            </div>
+          </ng-container>
         </div>
 
-        <ng-container *ngIf="isSubscription(entity); else product">
-          <div class="product-details">
-            <div>
-              <div>Cycles {{entity.cycles.length}}</div>
-              <div>{{entity.getInitialPrice().usd()}}</div>
-            </div>
-            <button mat-button [routerLink]="['/products', 'schedule', entity.id]">EDIT</button>
-          </div>
-        </ng-container>
-
-        <ng-template #product>
-          <div class="product-details">
-            <div>
-              <div>SKU {{entity.sku}}</div>
-              <div>{{entity.defaultPrice.usd()}}</div>
-            </div>
-            <button mat-button [routerLink]="['/products', 'product', entity.id]">EDIT</button>
-          </div>
-        </ng-template>
+        <div class="card-buttons">
+          <button mat-button (click)="navigateTo(entity)">EDIT</button>
+          <mat-icon *ngIf="entity.bulkSelected">done</mat-icon>
+        </div>
       </div>
     </ng-container>
 
