--- a/src/app/pages/products-page/product-view/product-images-gallery/product-images-gallery.component.html
+++ b/src/app/pages/products-page/product-view/product-images-gallery/product-images-gallery.component.html
@@ -1,18 +1,19 @@
 <div class="images-container">
   <div class="title">
     <div>Images</div>
-    <button mat-button (click)="displayImageUploadDialog()">Upload New Image</button>
+    <button mat-button (click)="displayImageUploadDialog()">New Image</button>
   </div>
   <slider-gallery>
     <div class="image-wrapper" sliderGalleryItem *ngFor="let image of product.imageUrls; let i = index">
       <div class="image-box">
         <div class="image">
-          <div *ngIf="i === 0" class="default">Default</div>
           <img src="{{image}}" alt="">
         </div>
         <div class="buttons">
-          <button *ngIf="i !== 0" mat-button class="default-button" (click)="setDefaultImage.emit(image)">Make Default</button>
-          <button mat-button (click)="deleteImage(image)">Delete</button>
+          <button mat-button class="delete-button" (click)="deleteImage(image)">DELETE</button>
+          <button mat-icon-button class="favorite" [class.favorite--selected]="i === 0">
+            <mat-icon (click)="toggleFavorite(image, i)">favorite</mat-icon>
+          </button>
         </div>
       </div>
     </div>
