Remove watermark views

--- a/src/app/pages/customer-advanced-page/confirmation-item/confirmation-item.component.html
+++ b/src/app/pages/customer-advanced-page/confirmation-item/confirmation-item.component.html
@@ -12,8 +12,7 @@
 
       <button mat-button
               [routerLink]="['/customers/advanced']"
-              [queryParams]="{session: sessionConfirmation.id}"
-              fragment="watermark">
+              [queryParams]="{session: sessionConfirmation.id}">
         VIEW SESSION
       </button>
     </div>
