--- a/src/app/pages/customer-advanced-page/customer-advanced.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced.component.html
@@ -1,5 +1,5 @@
 <div class="split-wrapper">
-  <div class="container" [class.container--with-side]="detailsElement && selectedIndex === 4">
+  <div class="container">
     <blue-header [items]="breadcrumbs" [titleValue]="getTitle()">
       <ng-container *ngIf="sessionId && session && sessionService.hasWritePermission()">
         <button mat-button *ngIf="!session.cancelled.cancelled; else cancelmessage" (click)="openCancelSessionModal()" class="cancel">CANCEL SESSION</button>
