Remove watermark from customer/order/session views

--- a/src/app/pages/customer-advanced-page/rebill-item/rebill-item.component.html
+++ b/src/app/pages/customer-advanced-page/rebill-item/rebill-item.component.html
@@ -4,7 +4,7 @@
     <div class="info">
       <div>Next bill {{rebill.billAt | formatDateTime: 'MMMM DD, YYYY'}}</div>
 
-      <button mat-button *ngIf="!sessionMode" (click)="navigateToWatermark(rebill)">Edit</button>
+      <button mat-button *ngIf="!sessionMode" (click)="navigateToSession(rebill)">Edit</button>
     </div>
   </div>
 
