--- a/src/assets/scss/_dialogs.scss
+++ b/src/assets/scss/_dialogs.scss
@@ -30,7 +30,7 @@ mat-dialog-container {
 .custom-dialog {
   &__buttons {
     display: flex !important;
-    padding: 15px !important;
+    padding: 15px 15px 0 !important;
     font-size: 12px;
 
     div {
@@ -50,6 +50,23 @@ mat-dialog-container {
       margin-left: auto;
       margin-right: 0;
       color: $main-color;
+    }
+
+    button:first-of-type {
+      margin-left: auto !important;
+      margin-right: 20px !important;
+    }
+
+    button:last-of-type {
+      color: #ffffff;
+      background: $main-color-400 !important;
+    }
+
+    button:only-child {
+      margin-left: auto !important;
+      margin-right: 0 !important;
+      color: #ffffff;
+      background: $main-color-400 !important;;
     }
   }
 }
