Fix edit/save/select UI

--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
@@ -102,7 +102,7 @@
 
       <mat-tab>
         <cycles-editor
-          [productSchedule]="productScheduleCycles"
+          [cyclesProductSchedule]="productScheduleCycles"
           (saveChanges)="saveProductScheduleCycles($event)"
           (undoChanges)="undoProductScheduleCycles()"
           (redoChanges)="redoProductScheduleCycles()"
