--- a/src/app/shared/components/cycles-editor/editor/editor.component.html
+++ b/src/app/shared/components/cycles-editor/editor/editor.component.html
@@ -53,7 +53,7 @@
 
             </div>
 
-            <div *ngIf="cycle.nextPosition !== -1 && cycle.nextPosition <= cycle.position" class="inf">
+            <div *ngIf="cycle.nextPosition !== null && cycle.nextPosition <= cycle.position" class="inf">
               <mat-icon>autorenew</mat-icon>
               <div class="inf__data">
                 <div>Repeat</div>
