Update error handling on product schedules editor view

--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
@@ -103,10 +103,12 @@
       <mat-tab>
         <cycles-editor
           [cyclesProductSchedule]="productScheduleCycles"
+          [editMode]="cyclesEditMode"
           (saveChanges)="saveProductScheduleCycles($event)"
           (undoChanges)="undoProductScheduleCycles()"
           (redoChanges)="redoProductScheduleCycles()"
           (cancelChanges)="cancelProductScheduleCyclesChanges()"
+          (editModeChanged)="cyclesEditMode = $event"
         ></cycles-editor>
       </mat-tab>
 
