Remove restrictions on fulfillment provider input fields

--- a/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-add-new/fulfillment-provider-add-new.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-add-new/fulfillment-provider-add-new.component.html
@@ -30,15 +30,15 @@
       </mat-form-field>
 
       <mat-form-field *ngIf="entity.provider.name === 'ThreePL'" [class.error]="formInvalid && (!entity.provider.threeplFacilityId && entity.provider.threeplFacilityId !== 0)" class="entity-view__card__content__item">
-        <input matInput [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="{{'FULFILLMENT_INFO_FACILITYID' | translate}}" [(ngModel)]="entity.provider.threeplFacilityId" name="facilityId" type="text">
+        <input matInput [disabled]="mode === modes.View" placeholder="{{'FULFILLMENT_INFO_FACILITYID' | translate}}" [(ngModel)]="entity.provider.threeplFacilityId" name="facilityId" type="text">
       </mat-form-field>
 
       <mat-form-field *ngIf="entity.provider.name === 'ThreePL'" [class.error]="formInvalid && (!entity.provider.threeplId && entity.provider.threeplId !== 0)" class="entity-view__card__content__item">
-        <input required matInput [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="{{'FULFILLMENT_INFO_THREEPLID' | translate}}" [(ngModel)]="entity.provider.threeplId" name="threeplId" type="text">
+        <input required matInput [disabled]="mode === modes.View" placeholder="{{'FULFILLMENT_INFO_THREEPLID' | translate}}" [(ngModel)]="entity.provider.threeplId" name="threeplId" type="text">
       </mat-form-field>
 
       <mat-form-field [class.error]="formInvalid && (!entity.provider.threeplCustomerId && entity.provider.threeplCustomerId !==0)" class="entity-view__card__content__item">
-        <input required matInput [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="{{'FULFILLMENT_INFO_CUSTOMERID' | translate}}" [(ngModel)]="entity.provider.threeplCustomerId" name="customerId" type="text">
+        <input required matInput [disabled]="mode === modes.View" placeholder="{{'FULFILLMENT_INFO_CUSTOMERID' | translate}}" [(ngModel)]="entity.provider.threeplCustomerId" name="customerId" type="text">
       </mat-form-field>
     </ng-container>
 
@@ -53,7 +53,7 @@
       </mat-form-field>
 
       <mat-form-field class="entity-view__card__content__item">
-        <input matInput [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="{{'FULFILLMENT_INFO_STOREID' | translate}}" [(ngModel)]="entity.provider.storeId" name="storeid" type="text">
+        <input matInput [disabled]="mode === modes.View" placeholder="{{'FULFILLMENT_INFO_STOREID' | translate}}" [(ngModel)]="entity.provider.storeId" name="storeid" type="text">
       </mat-form-field>
 
     </ng-container>
